delivery amount adding
